#pragma once

struct Move {
    int fromRow, fromCol;
    int toRow,   toCol;
};